@@ -1,3 +1,8 @@
+2006-06-01  David Reveman  <davidr@novell.com>
+
+	* include/compiz.h:
+	* src/window.c: Add updateWindowClass.
+
 2006-05-31  David Reveman  <davidr@novell.com>
 
 	* include/compiz.h:
